--- a/introducao-html-css/style.css
+++ b/introducao-html-css/style.css
@@ -1,20 +1,48 @@
 body{
-    background: #ccc;
+    background: #f7f7f7;
+    font-family: Verdana;
 }
 
+.profile{
+    border: 1px solid #505050;
+    border-radius: 50%;
+}
 #title, .subtitle, .post_title {
-    color: blue;
+    color: #505050;
 }
-
+#title{
+    font-size: 40px;
+    text-transform: uppercase;
+}
+a{
+    text-decoration: line-through;
+    color: #505050;
+}
 .post_title{
     font-size: 16px;
     font-style: italic;
-    padding: 15px 0 15px 0;
+    margin: 0;
+    margin-bottom: 15px;
 }
 .post{
     background: #FFF;
     padding: 10px;
-    border: 2px solid #505050;
+    border: 3px solid #505050;
     border-radius: 5px;
-    margin: 15px 10px 5px 0;
+    margin-bottom: 15px;
+}
+.post_content{
+    margin: 0;
+    margin-bottom: 15px;
+    text-transform: capitalize;
+}
+.post_image{
+    margin-bottom: 15px;
+}
+.contact_list{
+    list-style-type: none;
+    padding-left: 15px;
+}
+.contact_list li a{
+    text-decoration: none;
 }
