--- a/introducao-html-css/style.css
+++ b/introducao-html-css/style.css
@@ -1,6 +1,8 @@
 body{
     background: #f7f7f7;
     font-family: Verdana;
+    max-width: 900px;
+    margin: auto;
 }
 
 .profile{
@@ -35,9 +37,11 @@ a{
     margin: 0;
     margin-bottom: 15px;
     text-transform: capitalize;
+    text-align: justify;
 }
 .post_image{
     margin-bottom: 15px;
+    width: 100%;
 }
 .contact_list{
     list-style-type: none;
